# internal/dto/tool_dto.go
@@ -90,6 +90,6 @@ type ToolResponseDTO struct {
 	Inputs      []ToolInputResponseDTO  `json:"inputs"`
 	Outputs     []ToolOutputResponseDTO `json:"outputs"`
 	Version     int                     `json:"version"`
-	CreatedAt   time.Time               `json:"created_at"`
-	UpdatedAt   time.Time               `json:"updated_at"`
+	CreatedAt   time.Time               `json:"createdAt"`
+	UpdatedAt   time.Time               `json:"updatedAt"`
 }
