# internal/models/tool.go
@@ -27,6 +27,6 @@ type Tool struct {
 	Inputs      []ToolInput   `bson:"inputs" json:"inputs"`
 	Outputs     []ToolOutput  `bson:"outputs" json:"outputs"`
 	Version     int           `bson:"version" json:"version"`
-	CreatedAt   time.Time     `bson:"created_at" json:"created_at"`
-	UpdatedAt   time.Time     `bson:"updated_at" json:"updated_at"`
+	CreatedAt   time.Time     `bson:"created_at" json:"createdAt"`
+	UpdatedAt   time.Time     `bson:"updated_at" json:"updatedAt"`
 }
